# HDC-PSL-VSA-HDLM-AI-with-Multi-Level-Semantic-Mapping-Strategy-

./: CLAUDE.md  CLAUDE1_500_TASKS.md  CLAUDE1_DO_NOW.md  CLAUDE1_NEXT_BATCH.md  CLAUDE1_TASKS.md  IMPROVEMENTS.md  README.md  SECURITY_AUDIT_API_RS.md  SESSION-LOG-20260416.md  SESSION_HANDOFF_20260417.md  STATE.md  claude1_audit_results.md  claude1_distribution_report.md  claude1_quality_audit_r2.md  claude1_quality_report.md  lfi_bus.json
docs/: ACCESS_TIERS.md  AI_OPERATIONS_PLATFORM.md  APP_SECTIONS.md  CLASSROOM_DESIGN.md  CROSS_PLATFORM_ARCHITECTURE.md  LFI_BEATS_LLMS_ROADMAP.md  LFI_SESSION_HANDOFF_2026-04-19.md  LFI_SUPERSOCIETY_ARCHITECTURE.md  PLAUSIDEN_LAYERS.md  PROJECT_STRUCTURE.md
lfi_dashboard/: SESSION-LOG.md  index.html  package-lock.json  package.json  tsconfig.json
lfi_dashboard/public/: sw.js
lfi_dashboard/scripts/: hoist-audit.sh  stale-refs.sh  typecheck-summary.sh
lfi_mobile/: README.md  build.gradle  settings.gradle
lfi_vsa_core/: Cargo.toml  magpie_test.jsonl  test_final.exp
scripts/: build_causal_edges.py  curated_business_law_econ.py  curated_distributed_blockchain_ux_product.py  curated_marketing_history_linux.py  curated_os_compilers_embedded_cyber.py  curated_pentesting.py  dedup_facts.py  eval_harness.py  gemini-trainer.sh  generate_conversations.py  magpie_generate.sh  magpie_pipeline.py  nightly_ingest.sh  parse_mitre_attack.py  quality_classifier.py  train_adaptive.sh  train_rotate.sh  training_scheduler.py
tools/: pineapple-session.sh
tools/pineapple-harden/: Cargo.toml
tools/pineapple-harden/src/: main.rs
(+196 files in other folders)
