[package]
name = "pineapple-harden"
version = "0.1.0"
edition = "2021"
description = "Adversary identity generator for WiFi Pineapple tiered simulation"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
